# easy_profiler

./: CMakeLists.txt  README.md
core/: package.xml
core/include/easy_profiler/: reader.h
core/src/: current_time.h  event_trace_win.cpp  profile_manager.cpp  reader.cpp
include/easy_profiler/: easy_socket.h  profiler.h  profiler_aux.h  serialized_block.h
src/: easy_socket.cpp  profile_manager.h
