<?xml version="1.0"?>
<package>
  <name>easy_profiler</name>
  <version>1.2.0</version>
  <description>The easy_profiler package</description>

  <maintainer email="davide.faconti@eurecat.org">Davide Faconti</maintainer>


  <license>MIT</license>



  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
